Add hieroglyphic symbol detection and classification

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,8 @@ flutter:
     - assets/model/
     - assets/animations/
     - assets/images/grunge-background.jpg
+    - assets/models/siamese_model.tflite
+    - assets/models/features_trial1.npy
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
